repos/makepy/contents/test/fail/ImportNoExist.rules
import xxx file yyy

all:
